# Tranquility

./: .gitignore  Cargo.toml  docker-compose.yaml  shell.nix
data_access/: Cargo.toml
data_access/src/: lib.rs
data_access/src/attachments/: attachments_repository.rs  mod.rs  model.rs
data_access/src/auth/: auth_repository.rs  mod.rs  model.rs
data_access/src/channel/: channel_repository.rs  mod.rs  model.rs
data_access/src/guilds/: guild_repository.rs  mod.rs  model.rs
data_access/src/members/: member_repository.rs  mod.rs  model.rs
data_access/src/messages/: message_repository.rs  mod.rs  model.rs
data_access/src/roles/: mod.rs  model.rs  role_repository.rs
data_models/: Cargo.toml
data_models/src/: attachment.rs  auth.rs  channel.rs  guilds.rs  lib.rs  members.rs  messages.rs  roles.rs  websocket.rs
database_scripts/: 01-create_auth_table.sql  03-create_member_table.sql  04-create_channel_table.sql  05-create_role_table.sql  06-create_role_intent_table.sql  07-create_message_table.sql  08-create_attachment_table.sql  09-create_message_attachment_mapping_table.sql  create_guild_table.sql
models/: Cargo.toml
notifications/: Cargo.toml
notifications/src/: lib.rs  models.rs
server/: Cargo.toml
server/src/: auth_user.rs  channel.rs  guild.rs  lib.rs  member.rs  message.rs  role.rs
src/: auth_middleware.rs  file_handler.rs  jwt_handler.rs  main.rs  password_manager.rs
src/data_access/: auth_repository.rs  guild_repository.rs  member_repository.rs  mod.rs
src/endpoints/: attachment.rs  auth.rs  guild.rs  message.rs  mod.rs  websocket.rs
(+2 files in other folders)
