[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
server = { path = "./server" }
actix-web = "4"
actix-ws = "0.3"
chrono = "0.4"
serde = "1.0.208"
serde_json = "1.0.125"
futures-util = "0.3.30"
jwt = "0.16"
hmac = "0.12"
sha2 = "0.10"

[dependencies.mongodb]
version = "3.0.1"