[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-ws = "0.3"
serde = "1.0.208"
serde_json = "1.0.125"
futures-util = "0.3.30"
jwt = "0.16"
hmac = "0.12"
sha2 = "0.10"
argon2 = "0.5"
env_logger = "0.11.5"

data_access = {path = "./data_access"}
data_models = {path = "./data_models"}
actix-cors = "0.7.0"
